added the text field id

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <fieldset>
                 <legend>Sign up for our newsletter</legend>
                 <label for="email">Please enter your email address</label>
-                <input type="text" name="email">
+                <input type="text" name="email" id="email">
                 <input type="submit" value="Sign me up!">
               </fieldset>
             </form>
